cmake_minimum_required(VERSION 3.20)
project(SkwarczenskiJan-etap2)

set(CMAKE_CXX_STANDARD 14)

add_executable(SkwarczenskiJan-etap2 main.cpp Samochod.cpp Samochod.h Fabryka.cpp Fabryka.h Pojazd.cpp Pojazd.h PojazdSilnikowy.cpp PojazdSilnikowy.h Rower.cpp Rower.h Motocykl.cpp Motocykl.h Komis.cpp Komis.h Lakiernik.cpp Lakiernik.h)
